# deep-research-skills

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  drs  evaluation-comparison-report.md  evaluation-raw-runs.json  handoff_report.md  install.py  pyproject.toml
.agents/skills/deep-dive/: SKILL.md
.agents/skills/evaluate/: SKILL.md
.agents/skills/evaluate/tasks/: hard_tasks.yaml  pilot_tasks.yaml
.agents/skills/landscape-scan/: SKILL.md
.agents/skills/research-loop/: SKILL.md
.agents/skills/research-loop/docs/: mega-plan-guide.md  research-workflow.md
.agents/skills/verify/: SKILL.md
.devin-plugin/: plugin.json
.github/workflows/: ci.yml
benchmarks/: __init__.py  action_parser.py  direct.py  drs.py  judge.py  llm.py  react.py  runner.py  search.py  tasks.py  test_harness.py
deep_research/: __init__.py  budget.py  cli.py  models.py  proxies.py  state_machine.py  storage.py  validation.py
evaluation_runs/smoke-v3-20260719/: raw_runs.json  run_config.json  tasks.yaml
examples/kv-cache-research/: ASAD_KV_Proposal.md  asad_kv_prototype.py  mega-plan.md  time-budget.md  unknowns-registry.md
scripts/: advance_phase.py  calculate_budget.py  calculate_proxy.py  initialize_session.py  validate_state.py
skills/deep-dive/: SKILL.md
skills/landscape-scan/: SKILL.md
skills/research-loop/: SKILL.md
skills/research-loop/docs/: research-workflow.md
skills/research-loop/templates/: archive.md  landscape-table.md  mechanism.md  mega-plan.md  proxy-log.md  time-budget.md  unknowns-registry.md
skills/verify/: SKILL.md
tests/: test_runtime.py
(+7 files in other folders)
