[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-research-skills"
version = "0.1.1"
description = "Interleaved deep-research and execution workflow state-machine runtime"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "PyYAML>=6.0,<7"
]

[project.scripts]
drs = "deep_research.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["deep_research*"]
