[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-research-skills"
version = "0.2.0"
description = "Interleaved deep-research and execution workflow state-machine runtime with A/B evaluation harness"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "PyYAML>=6.0,<7",
    "numpy>=1.24",
]

[project.scripts]
drs = "deep_research.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["deep_research*", "benchmarks*"]
